# Snowflake-to-FalkorDB

./: .gitignore  Cargo.toml  README.md  deny.toml  example.config.json  example.rows.json  snowflake_stream_example.yaml
.github/: wordlist.txt
.github/workflows/: coverage.yml  main.yml  pr-checks.yml
src/: config.rs  cypher.rs  main.rs  mapping.rs  metrics.rs  orchestrator.rs  sink.rs  sink_async.rs  source.rs  state.rs
