[package]
name = "snowflake_to_falkordb"
version = "0.1.0"
edition = "2021"
description = "MVP tool to load tabular data into FalkorDB via UNWIND+MERGE"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive","env"] }
falkordb = { git = "https://github.com/FalkorDB/falkordb-rs.git", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros","rt-multi-thread","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snowflake-connector-rs = "0.8.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
once_cell = "1.19"

[profile.release]
opt-level = 3
